# cmake-vcpkg-template

./: .clang-format  CMakeLists.txt  CMakePresets.json  readme.ko.md  readme.md  vcpkg.json
.github/workflows/: main.yaml
app/: CMakeLists.txt
app/hajime-cli/: CMakeLists.txt  main.cpp  readme.md
include/hajime/: hajime.h
src/: CMakeLists.txt
src/hajime/: CMakeLists.txt  hajime.cpp
vcpkg-custom-triplet/: arm64-linux-cross.cmake
